refactored db manager and file managers into classes

--- a/Scraping_RAWtext.ipynb
+++ b/Scraping_RAWtext.ipynb
@@ -5,40 +5,24 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import urllib3\n",
-    "import re\n",
-    "import browsercookie\n",
-    "from bs4 import BeautifulSoup\n",
-    "import bs4\n",
-    "import datetime\n",
-    "from time import sleep\n",
-    "import requests \n",
-    "import mysql.connector\n",
-    "import os\n",
-    "import time\n",
-    "import random\n",
-    "from urllib3.exceptions import MaxRetryError\n",
-    "#import constant urllib3.exceptions.MaxRetryError()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Helper Functions Included\n"
+     ]
+    }
+   ],
    "source": [
-    "#def default_newsdatabase_connect():\n",
-    "mydb = mysql.connector.connect(\n",
-    "  host=\"localhost\",\n",
-    "  user=\"pythonuser\",\n",
-    "  passwd=\"password\",\n",
-    "  database=\"newsdatabase\"\n",
-    ") \n",
     "\n",
-    "mycursor = mydb.cursor(buffered=True)\n",
-    "#    return mycursor\n",
-    "#mycursor = default_newsdatabase_connect()"
+    "%run 'Misc_Helper_Funcs.ipynb'"
    ]
   },
   {
@@ -123,25 +107,7 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def check_article_rawtext_present(url):\n",
-    "    t = (url,)\n",
-    "    #print(mycursor.execute('SELECT * FROM urls WHERE id=2'))\n",
-    "    mycursor.execute('SELECT * FROM check WHERE url=%s', t)\n",
-    "    match = mycursor.fetchall()\n",
-    "    return len(match) > 0\n",
-    "\n",
-    "def write_raw_text_to_db(url, rawtext):\n",
-    "    if not check_article_rawtext_present(construct_full_url(url)):\n",
-    "        #print(construct_full_url('/2019/08/19/us/politics/elizabeth-warren-native-american.html', 'NewYorkTimes'))\n",
-    "        sql = \"INSERT INTO raw_articles (url, raw_article) VALUES (%s, %s)\"\n",
-    "        val = (construct_full_url(link, outlet),date,outlet) #(\"https://www.nytimes.com\"+link, \"08/20/2019\",NewYorkTimes)\n",
-    "        mycursor.execute(sql, val)\n",
-    "\n",
-    "        mydb.commit()\n",
-    "\n",
-    "        print(mycursor.rowcount, \"record inserted.\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -186,80 +152,20 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def correct_location():\n",
-    "    return (os.path.exists(\"article_files\"))\n",
-    "def path_exists(inpath):\n",
-    "    return (os.path.exists(inpath))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def write_file(file_path):\n",
-    "    pass\n",
-    "\n",
-    "def generate_organizational_path(doc_status,outlet,category,year,month,day):\n",
-    "    return(doc_status+'/'+str(year)+'/'+str(month)+'/'+str(day))+'/'+category+'/'+outlet+'/'\n",
-    "\n",
-    "def split_path_string_to_list(instring):\n",
-    "    dirty_list = instring.split(\"/\")\n",
-    "    clean_list = [level for level in dirty_list if '' != level]\n",
-    "    return clean_list\n",
-    "\n",
-    "def find_absolute_file_path(structure):\n",
-    "    root = \"/home/hog/Documents/nltk_practice/ArticleFiles/\"\n",
-    "    return root+structure\n",
-    "\n",
-    "def find_absolute_document_location(structure,file_name):\n",
-    "    dir_structure = find_absolute_file_path(structure)\n",
-    "    return dir_structure+file_name\n",
-    "\n",
-    "#replace hardcoded root\n",
-    "def update_path_structure(structure):\n",
-    "    root = \"/home/hog/Documents/nltk_practice/ArticleFiles/\"\n",
-    "    structure_layers = split_path_string_to_list(structure)\n",
-    "    current_verefied_depth = root\n",
-    "    created = False\n",
-    "    \n",
-    "    for level in structure_layers:\n",
-    "        test = current_verefied_depth+'/'+level\n",
-    "        if os.path.exists(test):\n",
-    "            current_verefied_depth = test\n",
-    "        else:\n",
-    "            os.mkdir(test)\n",
-    "            current_verefied_depth = test\n",
-    "            created = True\n",
-    "    \n",
-    "    return created\n",
-    "    \n",
-    "def get_date_string(): #duplicate\n",
-    "    d = datetime.date.today()\n",
-    "    return(str(d.month)+'/'+str(d.day)+'/'+str(d.year))\n",
-    "\n",
-    "\n",
-    "#should move date to scrape database maybe have scrapedate and seendate"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['d', 'd', 'd', 'd']"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -282,10 +188,7 @@
      ]
     }
    ],
-   "source": [
-    "a = generate_file_path(\"Raw\",\"NewYorkTimes\",\"Politics\",2019,8,31)\n",
-    "print(a)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -356,39 +259,14 @@
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def update_scrape_table(mycursor):\n",
-    "    #connect to db\n",
-    "    \n",
-    "    sql = \"SELECT * FROM urls WHERE url NOT IN (SELECT URL FROM Rawtext)\"\n",
-    "\n",
-    "    mycursor.execute(sql)\n",
-    "    unscrapped = mycursor.fetchall()\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    insert_sql = \"INSERT INTO Rawtext (Scraped, URL, File_Location) VALUES (%s, %s, %s)\"\n",
-    "    for x in unscrapped:\n",
-    "        \n",
-    "        URL=x[0]\n",
-    "        Scraped = 0\n",
-    "        File_Location= None\n",
-    "        \n",
-    "        insertval = (Scraped,URL,File_Location) #(\"https://www.nytimes.com\"+link, \"08/20/2019\",NewYorkTimes)\n",
-    "        mycursor.execute(insert_sql, insertval)\n",
-    "\n",
-    "        mydb.commit()\n",
-    "        print(URL+\" Transered\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "update_scrape_table(mycursor)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -572,128 +450,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "def scrape_article_for_raw_text(outlet,section,url):\n",
-    "    http = urllib3.PoolManager()\n",
     "\n",
-    "    response = http.request('GET', url)\n",
-    "    soup = BeautifulSoup(response.data)\n",
-    "    #print(soup.prettify())\n",
-    "    return str(soup)\n",
-    "\n",
-    "def write_text_to_location(text,filename,filepath):\n",
-    "    if not path_exists(filepath):\n",
-    "        print(\"path: \"+ filepath+ \" does not exist\")\n",
-    "        return 0\n",
-    "    else:    \n",
-    "        f=open(filepath+filename, \"w+\")\n",
-    "        f.write(text)\n",
-    "        \n",
-    "        return 1\n",
-    "    \n",
-    "def update_unscraped_article(url, file_location):\n",
-    "    #mycursor = mydb.cursor()\n",
-    "\n",
-    "    sql = \"UPDATE Rawtext SET File_Location = %s WHERE URL = %s\"\n",
-    "    val = (file_location, URL)\n",
-    "\n",
-    "    mycursor.execute(sql, val)\n",
-    "\n",
-    "    mydb.commit()\n",
-    "\n",
-    "    print(mycursor.rowcount, \"record(s) affected\") \n",
-    "\n",
-    "def get_unscraped_urls_from_db():\n",
-    "    sql = \"SELECT * FROM Rawtext WHERE Scraped = 0\"\n",
-    "\n",
-    "    mycursor.execute(sql)\n",
-    "    unscrapped = mycursor.fetchall()\n",
-    "    return unscrapped\n",
-    "\n",
-    "def convert_m_d_y_to_date_object(mdy_string):\n",
-    "    list_date = mdy_string.split('/')\n",
-    "    year = list_date[2]\n",
-    "    month = list_date[0]\n",
-    "    day = list_date[1]\n",
-    "    obj_date = datetime.date(int(year),int(month),int(day))\n",
-    "    return obj_date\n",
-    "\n",
-    "def get_date_for_url_db(url):\n",
-    "    sql = \"SELECT date FROM urls WHERE url= %s\"\n",
-    "    val = (url,)\n",
-    "    \n",
-    "    mycursor.execute(sql,val)\n",
-    "    row = mycursor.fetchall()\n",
-    "    assert(1 == len(row))\n",
-    "    db_date = row[0][0]\n",
-    "    obj_date = convert_m_d_y_to_date_object(db_date)\n",
-    "    return obj_date\n",
-    "\n",
-    "def get_outlet_for_url_db(url):\n",
-    "    sql = \"SELECT outlet FROM urls WHERE url= %s\"\n",
-    "    val = (url,)\n",
-    "    \n",
-    "    mycursor.execute(sql,val)\n",
-    "    row = mycursor.fetchall()\n",
-    "    assert(1 == len(row))\n",
-    "    outlet = row[0][0]\n",
-    "    return outlet\n",
-    "\n",
-    "def set_path_for_file_db(url, file_loc):\n",
-    "    mycursor = mydb.cursor()\n",
-    "    sql = \"UPDATE Rawtext SET File_Location = %s WHERE URL = %s\"\n",
-    "    val = (file_loc, url)\n",
-    "    mycursor.execute(sql,val)\n",
-    "    mydb.commit()\n",
-    "\n",
-    "def mark_url_as_scraped_db(url):\n",
-    "    mycursor = mydb.cursor()\n",
-    "    sql = \"UPDATE Rawtext SET Scraped = 1 WHERE URL = %s\"\n",
-    "    val = (url,)\n",
-    "    mycursor.execute(sql,val)\n",
-    "    mydb.commit()\n",
-    "\n",
-    "def convert_url_to_filename(url):\n",
-    "    url = url.replace('.','_')\n",
-    "    url = url.replace('/','_')\n",
-    "    name = url + '.txt'\n",
-    "    return name\n",
-    "\n",
-    "#refactor so im not directely indexing response tuples\n",
-    "#update the section here\n",
-    "def scrape_unscraped_articles():\n",
-    "    unscrapped_articles = get_unscraped_urls_from_db()\n",
-    "    doc_status = \"Raw\"\n",
-    "    category = \"Politics\"\n",
-    "    #REPLACE HARDCODES\n",
-    "    for article in unscrapped_articles:\n",
-    "        url = article[1]\n",
-    "        \n",
-    "        date = get_date_for_url_db(url)\n",
-    "        year = date.year\n",
-    "        month = date.month\n",
-    "        day = date.day\n",
-    "        outlet = get_outlet_for_url_db(url)\n",
-    "        organizational_path = generate_organizational_path(doc_status,outlet,category,year,month,day)\n",
-    "        file_path=find_absolute_file_path(organizational_path) #directory structure above the file without the name\n",
-    "        \n",
-    "        #REEPLACE POLITICS HARDCODE\n",
-    "        \n",
-    "        raw_text = scrape_article_for_raw_text(outlet,category,url)        \n",
-    "        filename = convert_url_to_filename(url)\n",
-    "        \n",
-    "        update_path_structure(organizational_path) #create file hirarchy, takes only organization as input\n",
-    "        write_text_to_location(raw_text,filename,file_path)\n",
-    "        \n",
-    "        file_loc=find_absolute_document_location(organizational_path,filename) #directory structure with file name\n",
-    "        set_path_for_file_db(url, file_loc)\n",
-    "        \n",
-    "        mark_url_as_scraped_db(url)\n",
-    "        print(\"test complete for: \")\n",
-    "        print(url)\n",
-    "        #break #for testing 1 update\n",
-    "        time.sleep(60+random.randrange(0,60))\n",
-    "\n",
-    "        #move raw below the date"
+    "\n"
    ]
   },
   {
