--- a/Scraping_Into_SQL.ipynb
+++ b/Scraping_Into_SQL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,18 +36,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-83da6b540998>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-83da6b540998>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    https://www.w3schools.com/python/python_mysql_where.asp\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "https://www.w3schools.com/python/python_mysql_where.asp"
+    "#https://www.w3schools.com/python/python_mysql_where.asp"
    ]
   },
   {
@@ -94,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,26 +145,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 record inserted.\n",
-      "1 record inserted.\n",
-      "1 record inserted.\n",
-      "1 record inserted.\n",
-      "1 record inserted.\n",
-      "1 record inserted.\n",
-      "1 record inserted.\n",
-      "1 record inserted.\n",
-      "1 record inserted.\n",
-      "1 record inserted.\n",
-      "1 record inserted.\n",
-      "1 record inserted.\n",
-      "1 record inserted.\n",
       "1 record inserted.\n",
       "1 record inserted.\n",
       "1 record inserted.\n",
