deleted scraping interactions ipython

--- a/Scraping_Interactions.ipynb
+++ b/Scraping_Interactions.ipynb
@@ -2,20 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scraping_Interactions included\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Scraping_Interactions included\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -26,37 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Helper Functions Included\n",
-      "Helper Functions Included\n",
-      "Database_Interactions Included\n",
-      "Helper Functions Included\n",
-      "Helper Functions Included\n",
-      "Database_Interactions Included\n"
-     ]
-    }
-   ],
-   "source": [
-    "from misc_helper_funcs_and_constants import *\n",
-    "from database_interactions import *  \n",
-    "from local_file_interactions import * "
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "lf = LocalFileHandler()\n",
-    "db = DatabaseManager()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -64,6 +34,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from misc_helper_funcs_and_constants import *\n",
+    "from database_interactions import *  \n",
+    "from local_file_interactions import * \n",
     "\n",
     "def scrape_section_for_urls(outlet,section_identifier,url_storage):\n",
     "    http = urllib3.PoolManager()\n",
@@ -93,6 +66,9 @@
     "#refactor so im not directely indexing response tuples\n",
     "#update the section here\n",
     "def scrape_unscraped_articles():\n",
+    "    lf = LocalFileHandler()\n",
+    "    db = DatabaseManager()\n",
+    "\n",
     "    unscrapped_articles = db.get_unscraped_urls_from_db()\n",
     "    doc_status = \"Raw\"\n",
     "    category = \"Politics\"\n",
