--- a/Scraping_RAWtext.ipynb
+++ b/Scraping_RAWtext.ipynb
@@ -189,11 +189,60 @@
       "test complete for: \n",
       "https://www.nytimes.com/2019/09/20/us/politics/bernie-sanders-young-voters.html\n",
       "test complete for: \n",
-      "https://www.nytimes.com/2019/09/20/us/politics/trump-india-trade.html\n"
+      "https://www.nytimes.com/2019/09/20/us/politics/trump-india-trade.html\n",
+      "test complete for: \n",
+      "https://www.nytimes.com/2019/09/20/us/politics/trump-china-theat-to-world.html\n",
+      "test complete for: \n",
+      "https://www.nytimes.com/2019/09/20/us/politics/drone-isis-libya.html\n",
+      "test complete for: \n",
+      "https://www.nytimes.com/2019/09/20/us/politics/iowa-caucus-2020.html\n",
+      "test complete for: \n",
+      "https://www.nytimes.com/2019/09/20/us/politics/veterans-suicide.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/texans-will-be-the-most-underrepresented-americans-in-the-electoral-college-next-year/2019/09/20/dd6de718-fbdb-4bec-b9e7-81acf2c070be_story.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/judge-orders-president-trump-to-testify-in-2015-lawsuit/2019/09/20/caaf9026-dbd5-11e9-bfb1-849887369476_story.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/trump-issues-fresh-denial-of-a-dicey-conversation-with-a-foreign-leader/2019/09/20/00da79dc-dba3-11e9-a688-303693fb4b0b_story.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/trump-says-he-could-end-afghanistan-war-quickly-but-tens-of-millions-of-people-would-die/2019/09/20/016fdd9c-dbcb-11e9-a688-303693fb4b0b_story.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/house-gop-leader-says-whistleblower-could-have-gone-to-congress-a-democrat-says-thats-false/2019/09/20/620590c2-dbc9-11e9-bfb1-849887369476_story.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/presidential-runs-by-new-york-city-mayors-ranked/2019/09/20/7517ca47-eac5-45f5-9ce0-018982fd98be_story.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/kushner-to-attend-saudi-economic-conference-hosted-by-crown-prince-mohammed-bin-salman/2019/09/20/7565c920-dba6-11e9-adff-79254db7f766_story.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/new-york-mayor-bill-de-blasio-leaves-presidential-race/2019/09/20/d8ac8228-db9a-11e9-a688-303693fb4b0b_story.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/trump-has-been-openly-trying-to-leverage-ukraine-to-his-political-benefit-for-months/2019/09/20/c1e864b9-1470-43a2-ba8f-7a0284bdcba8_story.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/nra-calls-orourke-salesman-of-the-month-after-gun-store-cashes-in-with-beto-special/2019/09/20/62be8445-167b-4445-ad5e-2101696cc1c1_story.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/giuliani-admits-to-asking-ukraine-about-joe-biden-after-denying-it-30-seconds-earlier/2019/09/20/dea98201-3078-43df-acdf-6130b656edbb_story.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/beto-orourke-says-senates-top-democrat-has-accomplished-absolutely-nothing-on-gun-control/2019/09/20/ced58c92-db93-11e9-a688-303693fb4b0b_story.html\n",
+      "test complete for: \n",
+      "http://washingtonpost.com/politics/trump-issues-fresh-denial-of-a-dicey-conversation-with-a-foreign-leader/2019/09/20/00da79dc-dba3-11e9-a688-303693fb4b0b_story.html?tid=pm_politics_pop\n",
+      "test complete for: \n",
+      "http://washingtonpost.com/politics/judge-orders-president-trump-to-testify-in-2015-lawsuit/2019/09/20/caaf9026-dbd5-11e9-bfb1-849887369476_story.html?tid=pm_politics_pop\n",
+      "test complete for: \n",
+      "https://www.nytimes.com/2019/09/20/us/politics/giuliani-cuomo-trump.html\n",
+      "test complete for: \n",
+      "https://www.washingtonpost.com/politics/trumps-ukraine-scandal-may-also-hurt-bidens-campaign/2019/09/20/772aaba0-dbe6-11e9-ac63-3016711543fe_story.html\n"
      ]
     }
    ],
    "source": [
+    "#there is an odd interaction with WAPO that limits automatability. \n",
+    "#WAPO will sometimes start refusing all requests from python even with long and random \n",
+    "#intervals between requests. It will then be fine accepting a request immediately after that\n",
+    "#comes from starting the python script over (as opposed to one that reissues requests from the same script)\n",
+    "#I think some variable from the running python request is getting included in the request.\n",
+    "#will resolve in short term by just scheduling this script to be run multiple times a day\n",
+    "\n",
+    "#this issue can happen after 2 sequential requests or 20, but once it starts it doesnt seem to stop\n",
+    "#until i start over and run the script anew \n",
     "scrape_unscraped_articles()"
    ]
   },
